--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --inspect src/index.js",
+    "watch": "node-sass --watch src/resources/scss/app.scss src/public/css/app.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,7 +23,8 @@
   "homepage": "https://github.com/giabaodnvn/nodejs_blog#readme",
   "dependencies": {
     "express": "^4.18.1",
-    "express-handlebars": "^5.1.0"
+    "express-handlebars": "^5.1.0",
+    "node-sass": "^7.0.3"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
