--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "beautiful": "lint-staged",
     "start": "nodemon --inspect src/index.js",
     "watch": "node-sass --watch src/resources/scss/app.scss src/public/css/app.css",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -23,12 +24,8 @@
   },
   "homepage": "https://github.com/giabaodnvn/nodejs_blog#readme",
   "lint-staged": {
-    "src/**/*.{js,json.scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "src/**/*.{js,json.scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write",
+    "*.{js,css,md}": "prettier --write"
   },
   "dependencies": {
     "express": "^4.18.1",
