--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/giabaodnvn/nodejs_blog#readme",
   "lint-staged": {
-    "src/**/*.{js,json.scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
+    "*.{js,css,md}": "prettier --write"
   },
   "dependencies": {
     "express": "^4.18.1",
