--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "express-handlebars": "^5.1.0",
+    "mongoose": "^6.6.5",
     "node-sass": "^7.0.3"
   },
   "devDependencies": {
